<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>rotors_comm</name>
  <version>4.0.14</version>
  <description>RotorS specific messages and services.</description>

  <maintainer email="giuseppe.silano@unisannio.it">Giuseppe Silano</maintainer>
  <maintainer email="luigi.iannelli@unisannio.it">Luigi Iannelli</maintainer>

  <author>Giuseppe Silano</author>
  <author>Emanuele Aucone</author>
  <author>Benjamin Rodriguez</author>
  <author>Luigi Iannelli</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/gsilano/CrazyS</url>
  <url type="bugtracker">https://github.com/gsilano/CrazyS/issues</url>

  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
